# Azure-based-drive-clone

./: .env.example  .gitignore  ARCHITECTURE_DECISIONS.md  CHANGELOG.md  CONTRIBUTING.md  DEPLOYMENT.md  HANDOVER.md  LICENSE  OBSERVABILITY.md  PERFORMANCE.md  PROGRESS.md  PROJECT_SPEC.md  README.md  RELEASE.md  RULES.md  SECURITY.md  TODO.md  docker-compose.prod.yml  docker-compose.yml
backend/: Dockerfile  Dockerfile.dev  Dockerfile.prod  alembic.ini  pyproject.toml  requirements.txt
backend/app/: main.py
backend/app/auth/: jwt.py  password.py
backend/app/compat/: starlette_multipart.py
backend/app/config/: settings.py
backend/app/core/: cache.py  error_handlers.py  exceptions.py  logging_config.py  otel.py  retry.py
backend/app/dependencies/: auth.py  database.py  permission.py  redis.py  storage.py
backend/app/middleware/: correlation_id.py  metrics.py  rate_limiter.py  request_logger.py  security_headers.py  timeout.py
backend/app/models/: __init__.py  base.py  discovery.py  file.py  sharing.py  user.py  versioning.py
backend/app/repositories/: discovery.py  file.py  sharing.py  user.py  versioning.py
backend/app/schemas/: auth.py  discovery.py  file.py  sharing.py  versioning.py
backend/app/services/: audit.py  auth.py  discovery.py  file.py  folder.py  sharing.py  storage.py  versioning.py
backend/app/storage/: azure_blob.py  base.py
backend/migrations/: env.py
backend/migrations/versions/: 001_create_users_and_refresh_tokens.py  002_create_folders_and_files.py  005_create_file_versions.py  (+4 more)
backend/tests/: conftest.py  test_auth.py  test_error_handlers.py  test_fix_critical.py  test_fix_high.py  test_health.py  test_middleware.py  test_phase4.py  test_phase5.py  test_phase6.py  test_phase7.py  test_phase7b.py  test_regression_fixes.py  test_storage.py  test_upload_limits.py
(+72 files in other folders)
